kubernetes/manifests/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: northstar
  labels:
    app.kubernetes.io/part-of: northstar-logistics
    environment: dev
