kubernetes/manifests/dev/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: northstar-frontend
  namespace: northstar
  labels:
    app: northstar-frontend

spec:
  replicas: 1

  selector:
    matchLabels:
      app: northstar-frontend

  template:
    metadata:
      labels:
        app: northstar-frontend

    spec:
      containers:
        - name: frontend
          image: northstarlogisticsdevacr.azurecr.io/northstar-frontend:v5
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 80
              protocol: TCP

          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
