kubernetes/manifests/dev/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: northstar-frontend
  namespace: northstar
spec:
  selector:
    app: northstar-frontend

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

  type: ClusterIP
