kubernetes/manifests/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: northstar-ingress
  namespace: northstar
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod

spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - northstar.172.168.110.106.nip.io
      secretName: northstar-tls

  rules:
    - host: northstar.172.168.110.106.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: northstar-frontend
                port:
                  number: 80

          - path: /orders
            pathType: Prefix
            backend:
              service:
                name: northstar-backend
                port:
                  number: 8000

          - path: /health
            pathType: Prefix
            backend:
              service:
                name: northstar-backend
                port:
                  number: 8000
